yay now its truly working! :)